--- a/apps/container/project.json
+++ b/apps/container/project.json
@@ -11,7 +11,7 @@
         "outputPath": "dist/apps/container",
         "index": "apps/container/src/index.html",
         "baseHref": "/",
-        "main": "apps/container/src/main.tsx",
+        "main": "apps/container/src/main.ts",
         "polyfills": "apps/container/src/polyfills.ts",
         "tsConfig": "apps/container/tsconfig.app.json",
         "assets": [
@@ -20,7 +20,7 @@
         ],
         "styles": ["apps/container/src/styles.css"],
         "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "webpackConfig": "apps/container/webpack.config"
       },
       "configurations": {
         "production": {
