--- a/apps/products/project.json
+++ b/apps/products/project.json
@@ -11,13 +11,13 @@
         "outputPath": "dist/apps/products",
         "index": "apps/products/src/index.html",
         "baseHref": "/",
-        "main": "apps/products/src/main.tsx",
+        "main": "apps/products/src/main.ts",
         "polyfills": "apps/products/src/polyfills.ts",
         "tsConfig": "apps/products/tsconfig.app.json",
         "assets": ["apps/products/src/favicon.ico", "apps/products/src/assets"],
         "styles": ["apps/products/src/styles.css"],
         "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "webpackConfig": "apps/products/webpack.config"
       },
       "configurations": {
         "production": {
