--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nrwl/eslint-plugin-nx": "13.1.3",
     "@nrwl/jest": "13.1.3",
     "@nrwl/linter": "13.1.3",
+    "@nrwl/node": "13.1.3",
     "@nrwl/react": "13.1.3",
     "@nrwl/tao": "13.1.3",
     "@nrwl/web": "13.1.3",
