--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.6",
     "core-js": "^3.6.5",
+    "faker": "^5.5.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.0",
@@ -51,6 +52,7 @@
     "@nrwl/workspace": "13.1.3",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
+    "@types/faker": "^5.5.9",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
