--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,12 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@ecomm-mfes/common": ["libs/common/src/index.ts"],
-      "auth/AuthApp": ["apps/auth/src/bootstrap"],
-      "product-details/ProductDetailsApp": [
-        "apps/product-details/src/bootstrap"
-      ],
-      "products/ProductsApp": ["apps/products/src/bootstrap"]
+      "@ecomm-mfes/common": ["libs/common/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
